--- a/GatewayApp/src/main/resources/templates/home.html
+++ b/GatewayApp/src/main/resources/templates/home.html
@@ -98,7 +98,8 @@
 
 					<p class="text-faded">Press Refresh Button to get the latest
 						update</p>
-					<a href="#" class="btn btn-default btn-xl">Refresh!</a>
+					<!-- <a href="#" class="btn btn-default btn-xl" onClick="window.location.reload();">Refresh!</a>-->
+					<button type="button" onClick="window.location.reload();" style="color: Black">Refresh</button>
 					<hr></hr>
 					<div class="table-responsive">
 						<table id="table" class="table">
@@ -106,11 +107,11 @@
 								<tr>
 									<th data-field="jobDataId">Job Name</th>
 									<th data-field="jobId">Job Type</th>
-									<th data-field="jobName">wallTime</th>
-									<th data-field="nodes">jobId</th>
-									<th data-field="ppn">jobStatus</th>
-									<th data-field="wallTime">ppn</th>
-									<th data-field="jobFileName">nodes</th>
+									<th data-field="jobName">WallTime</th>
+									<th data-field="nodes">Job Id</th>
+									<th data-field="ppn">Job Status</th>
+									<th data-field="wallTime">PPN</th>
+									<th data-field="jobFileName">Nodes</th>
 								</tr>
 							</thead>
 							<tbody id="jobData"></tbody>
@@ -589,13 +590,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-center">
-					<h2 class="section-heading">Let's Get In Touch!</h2>
+					<h2 class="section-heading">Developed by Team Zenith</h2>
 					<hr class="primary"></hr>
-					<p>Ready to start your next project with us? That's great! Give
-						us a call or send us an email and we will get back to you as soon
-						as possible!</p>
+					<p>Anuj Bhandar<br /> Atul Mohan <br />Arpit Agarwal<br /></p>
 				</div>
-				<div class="col-lg-4 col-lg-offset-2 text-center">
+				<!-- <div class="col-lg-4 col-lg-offset-2 text-center">
 					<i class="fa fa-phone fa-3x wow bounceIn"></i>
 					<p>123-456-6789</p>
 				</div>
@@ -604,7 +603,7 @@
 					<p>
 						<a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
 					</p>
-				</div>
+				</div>-->
 			</div>
 		</div>
 	</section>
