Adding changes for displaying meesage for Monitor Job

--- a/GatewayApp/src/main/resources/templates/home.html
+++ b/GatewayApp/src/main/resources/templates/home.html
@@ -99,7 +99,7 @@
 					<p class="text-faded">Press Refresh Button to get the latest
 						update</p>
 					<!-- <a href="#" class="btn btn-default btn-xl" onClick="window.location.reload();">Refresh!</a>-->
-					<button type="button" onClick="window.location.reload();" style="color: Black">Refresh</button>
+					<button type="button" class="btn btn-default btn-xl" onClick="window.location.reload();" style="color: Black">Refresh</button>
 					<hr></hr>
 					<div class="table-responsive">
 						<table id="table" class="table">
