--- a/GatewayApp/src/main/resources/templates/home.html
+++ b/GatewayApp/src/main/resources/templates/home.html
@@ -98,7 +98,8 @@
 
 					<p class="text-faded">Press Refresh Button to get the latest
 						update</p>
-					<a href="#" class="btn btn-default btn-xl">Refresh!</a>
+					<!-- <a href="#" class="btn btn-default btn-xl" onClick="window.location.reload();">Refresh!</a>-->
+					<button type="button" class="btn btn-default btn-xl" onClick="window.location.reload();" style="color: Black">Refresh</button>
 					<hr></hr>
 					<div class="table-responsive">
 						<table id="table" class="table">
@@ -106,11 +107,11 @@
 								<tr>
 									<th data-field="jobDataId">Job Name</th>
 									<th data-field="jobId">Job Type</th>
-									<th data-field="jobName">wallTime</th>
-									<th data-field="nodes">jobId</th>
-									<th data-field="ppn">jobStatus</th>
-									<th data-field="wallTime">ppn</th>
-									<th data-field="jobFileName">nodes</th>
+									<th data-field="jobName">WallTime</th>
+									<th data-field="nodes">Job Id</th>
+									<th data-field="ppn">Job Status</th>
+									<th data-field="wallTime">PPN</th>
+									<th data-field="jobFileName">Nodes</th>
 								</tr>
 							</thead>
 							<tbody id="jobData"></tbody>
@@ -160,14 +161,14 @@
 									<div class="modal-body">
 										<form action="javascript:;" enctype="multipart/form-data"
 											method="post" accept-charset="utf-8" id="jobSubmitForm"
-											name="jobSubmit">
+											name="jobSubmit" autocomplete="off">
 											<input type="hidden" th:name="${_csrf.parameterName}"
 												th:value="${_csrf.token}" id="csrfTokenJobSubmit" />
 											<h4 class="section-heading">User Details:</h4>
 											<fieldset class="form-group">
 												<label for="UserID">User Name</label> <input type="username"
 													class="form-control" id="userName"
-													placeholder="Enter SSH User ID" name="user"></input>
+													placeholder="Enter SSH User ID" name="user" autocomplete="off"></input>
 											</fieldset>
 											<fieldset class="form-group">
 												<label for="exampleInputEmail1">Email</label> <input
@@ -179,11 +180,11 @@
 											<fieldset class="form-group">
 												<label for="exampleInputPassword1">PassPhrase :</label> <input
 													type="password" class="form-control" id="passPhrase"
-													placeholder="Private Key PassPhrase" name="pass"></input>
+													placeholder="Private Key PassPhrase" name="pass" autocomplete="off"></input>
 											</fieldset>
 											<fieldset class="form-group">
 												<label for="PrivateKeyFileInput">Private Key File</label> <input
-													type="file" class="form-control-file"
+													type="file" class="form-control-file" autocomplete="off"
 													id="PrivateKeyFileInput" name="ppk"> </input><small
 													class="text-muted">Select the pre-configured
 													private key file to be used for SSH authentication.</small>
@@ -223,7 +224,7 @@
 
 												<div class="custombox">
 													<!--  style="display: none"> -->
-													<label for="JobSourceCode">Job File</label> <input
+													<label for="JobSourceCode">Job File</label> <input autocomplete="off"
 														type="file" class="form-control-file" id="FileInput"
 														name="customfile"> <small class="text-muted">Select
 														the source code file, compatible types ".c"</small></input>
@@ -245,11 +246,11 @@
 											</fieldset>
 											<fieldset class="form-group">
 												<label for="jobName">Job Name</label> <input type="text"
-													class="form-control" id="jobName"
+													class="form-control" id="jobName" autocomplete="off"
 													placeholder="Assign a name to job" name="jobName"></input>
 											</fieldset>
 											<fieldset class="form-group">
-												<label for="nodeCount">Node Count</label> <input type="text"
+												<label for="nodeCount">Node Count</label> <input type="text" autocomplete="off"
 													class="form-control" id="nodeCount" placeholder="1,2,3 etc"
 													name="nodes"></input> <small class="text-muted">Enter
 													the required number of computing nodes</small>
@@ -341,19 +342,19 @@
 									</div>
 									<div class="modal-body">
 										<form action="javascript:;" enctype="multipart/form-data"
-											method="post" accept-charset="utf-8" id="jobMonitorForm"
+											method="post" accept-charset="utf-8" id="jobMonitorForm" autocomplete="off"
 											name="job">
 											<input type="hidden" th:name="${_csrf.parameterName}"
 												th:value="${_csrf.token}" id="csrfTokenJobMonitor" />
 											<h4 class="section-heading">User Details:</h4>
 											<fieldset class="form-group">
 												<label for="UserID">User Name</label> <input type="username"
-													class="form-control" id="muser"
+													class="form-control" id="muser" autocomplete="off"
 													placeholder="Enter SSH User ID" name="username"></input>
 											</fieldset>
 											<fieldset class="form-group">
 												<label for="passPhrase">PassPhrase :</label> <input
-													type="password" class="form-control" id="mpass"
+													type="password" class="form-control" id="mpass" autocomplete="off"
 													placeholder="Private Key PassPhrase" name="passPhrase"></input>
 											</fieldset>
 											<fieldset class="form-group">
@@ -430,19 +431,19 @@
 
 
 										<form action="javascript:;" enctype="multipart/form-data"
-											method="post" accept-charset="utf-8" id="jobCancelForm"
+											method="post" accept-charset="utf-8" id="jobCancelForm" autocomplete="off"
 											name="job">
 											<input type="hidden" th:name="${_csrf.parameterName}"
 												th:value="${_csrf.token}" id="csrfTokenCancelJob" />
 											<h4 class="section-heading">User Details:</h4>
 											<fieldset class="form-group">
 												<label for="UserID">User Name</label> <input type="username"
-													class="form-control" id="canceluser"
+													class="form-control" id="canceluser" autocomplete="off"
 													placeholder="Enter SSH User ID" name="username"></input>
 											</fieldset>
 											<fieldset class="form-group">
 												<label for="passPhrase">PassPhrase :</label> <input
-													type="password" class="form-control" id="cancelpass"
+													type="password" class="form-control" id="cancelpass" autocomplete="off"
 													placeholder="Private Key PassPhrase" name="passPhrase"></input>
 											</fieldset>
 											<fieldset class="form-group">
@@ -457,7 +458,7 @@
 											<h4 class="section-heading">Job Details:</h4>
 											<fieldset class="form-group">
 												<label for="jobID">Job ID :</label> <input type="number"
-													class="form-control" id="canceljobID"
+													class="form-control" id="canceljobID" autocomplete="off"
 													placeholder="Enter the job ID Ex: 1242254" name="jobNumber"></input>
 											</fieldset>
 											<fieldset class="form-group">
@@ -512,24 +513,24 @@
 									</div>
 									<div class="modal-body">
 
-										<form method="POST" enctype="multipart/form-data"
+										<form method="POST" enctype="multipart/form-data" autocomplete="off"
 											action="/download">
 											<input type="hidden" th:name="${_csrf.parameterName}"
 												th:value="${_csrf.token}" id="csrfTokenDownload" />
 											<h4 class="section-heading">User Details:</h4>
 											<fieldset class="form-group">
 												<label for="UserID">User Name</label> <input type="username"
-													class="form-control" id="downloaduser"
+													class="form-control" id="downloaduser" autocomplete="off"
 													placeholder="Enter SSH User ID" name="username"></input>
 											</fieldset>
 											<fieldset class="form-group">
 												<label for="passPhrase">PassPhrase :</label> <input
-													type="password" class="form-control" id="downloadpass"
+													type="password" class="form-control" id="downloadpass" autocomplete="off"
 													placeholder="Private Key PassPhrase" name="passPhrase"></input>
 											</fieldset>
 											<fieldset class="form-group">
 												<label for="PrivateKeyFileInput">Private Key File</label> <input
-													type="file" class="form-control-file"
+													type="file" class="form-control-file" autocomplete="off"
 													id="downloadPrivateKeyFileInput" name="ppkFile"></input> <small
 													class="text-muted">Select the pre-configured
 													private key file to be used for SSH authentication.</small>
@@ -539,7 +540,7 @@
 											<h4 class="section-heading">Job Details:</h4>
 											<fieldset class="form-group">
 												<label for="jobName">Job Name :</label> <input type="text"
-													class="form-control" id="downloadJobName"
+													class="form-control" id="downloadJobName" autocomplete="off"
 													placeholder="Enter the job Name" name="jobName"></input>
 											</fieldset>
 											<fieldset class="form-group">
@@ -551,7 +552,7 @@
 											</fieldset>
 											<fieldset class="form-group">
 												<label for="path">Working Directory :</label> <input
-													type="text" class="form-control" id="downloadWorkPath"
+													type="text" class="form-control" id="downloadWorkPath" autocomplete="off"
 													placeholder="Enter the working directory" name="workPath"></input>
 											</fieldset>
 
@@ -589,13 +590,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2 text-center">
-					<h2 class="section-heading">Let's Get In Touch!</h2>
+					<h2 class="section-heading">Developed by Team Zenith</h2>
 					<hr class="primary"></hr>
-					<p>Ready to start your next project with us? That's great! Give
-						us a call or send us an email and we will get back to you as soon
-						as possible!</p>
+					<p>Anuj Bhandar<br /> Atul Mohan <br />Arpit Agarwal<br /></p>
 				</div>
-				<div class="col-lg-4 col-lg-offset-2 text-center">
+				<!-- <div class="col-lg-4 col-lg-offset-2 text-center">
 					<i class="fa fa-phone fa-3x wow bounceIn"></i>
 					<p>123-456-6789</p>
 				</div>
@@ -604,7 +603,7 @@
 					<p>
 						<a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
 					</p>
-				</div>
+				</div>-->
 			</div>
 		</div>
 	</section>
