making changes to work with http

--- a/GatewayApp/src/main/resources/templates/home.html
+++ b/GatewayApp/src/main/resources/templates/home.html
@@ -514,7 +514,7 @@
 									<div class="modal-body">
 
 										<form method="POST" enctype="multipart/form-data" autocomplete="off"
-											action="/download">
+											action="download">
 											<input type="hidden" th:name="${_csrf.parameterName}"
 												th:value="${_csrf.token}" id="csrfTokenDownload" />
 											<h4 class="section-heading">User Details:</h4>
