--- a/GatewayApp/src/main/resources/templates/home.html
+++ b/GatewayApp/src/main/resources/templates/home.html
@@ -59,7 +59,7 @@
 			<div class="collapse navbar-collapse"
 				id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a class="page-scroll" href="#about">About</a></li>
+					<li><a class="page-scroll" href="#about">About Us</a></li>
 					<li><a class="page-scroll" href="#services">Services</a></li>
 					<li><a class="page-scroll" href="#contact">Contact</a></li>
 					<li><a th:if="${account}" th:href="@{/logout}" class="btn">Logout</a></li>
