--- a/GatewayAPI/.settings/org.eclipse.wst.common.component
+++ b/GatewayAPI/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <property name="java-output-path" value="/GatewayAPI/target/classes"/>
-        <property name="context-root" value="GatewayAPI"/>
+        <property name="context-root" value="GatewayApp"/>
     </wb-module>
 </project-modules>
