--- a/ZenUI/src/main/resources/templates/home.html
+++ b/ZenUI/src/main/resources/templates/home.html
@@ -514,7 +514,7 @@
 									<div class="modal-body">
 
 										<form method="POST" enctype="multipart/form-data" autocomplete="off"
-											action="download">
+											action="https://ec2-52-36-218-253.us-west-2.compute.amazonaws.com:8443/download">
 											<input type="hidden" th:name="${_csrf.parameterName}"
 												th:value="${_csrf.token}" id="csrfTokenDownload" />
 											<h4 class="section-heading">User Details:</h4>
